# RNA_Triplets

./: .gitignore  README.md  main.py
code/c++/: CMakeLists.txt  Makefile  global_variables.cpp  global_variables.hpp  heterogeneous.csv  heterogeneous_all.csv  homogeneous.csv  homogeneous_all.csv  internal.csv  internal_all.csv  nussinov.cpp  nussinov.hpp  strand_soup.cpp  test.ipynb  utilities.cpp  utilities.hpp
code/python/: global_variables.py  main.ipynb  main.py  utilities.py
